try to avoid page break inside teikyohyo container

--- a/app/assets/stylesheets/teikyohyo.scss
+++ b/app/assets/stylesheets/teikyohyo.scss
@@ -2,6 +2,7 @@
     display: block;
     clear: both;
     page-break-after: always !important;
+    page-break-inside: avoid;
     break-after: page !important;
     font-size: 0.9em;
 }
